[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "joomha"
version = "1.0.0"
description = "AI-powered CLI for understanding any codebase through conversation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ai", "cli", "code", "rag", "comprehension", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "gitpython>=3.1.0",
    "sentence-transformers>=2.2.0",
    "lancedb>=0.5.0",
    "pyarrow>=14.0.0",
    "google-generativeai>=0.5.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
]

[project.optional-dependencies]
eval = ["ragas>=0.1.0"]

[project.scripts]
joomha = "joomha.cli:app"

[project.urls]
Homepage   = "https://github.com/username/joomha"
Repository = "https://github.com/username/joomha"

[tool.setuptools.packages.find]
where   = ["."]
include = ["joomha*"]
